footer/unsub update

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 <p class="footer-content">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ab sint quos. Temporibus corporis illum adipisci consequatur quisquam officia libero error, quaerat expedita unde dignissimos, necessitatibus nam et ea exercitationem nemo veritatis dicta vero iure blanditiis. Iusto debitis exercitationem non laboriosam ut, repellendus maiores beatae labore esse, in voluptatibus veniam.
                 </p>
-                <span class="unsubscribe">To stop receiving these emails <a href="#">unsubscribe here..</a></span>
-                <p class="address">Wirecutter Inc. <br>620 Eight Avenue, New York, 10018</p>
+                <span class="unsubscribe">To stop receiving these emails <a href="#">unsubscribe here.</a></span>
+                <p class="address">EternalCode, LLC <br>98 Eight Avenue, Buffalo NY, 14228</p>
             </div>
             <div class="footer-links">
                 <ul>
