added social media icons

--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
 
     <!-- Footer Section Start -->
     <footer class="footer">
+        <div>
         <div class="container">
             <div class="footer-main">
-                <img src="images/EC.jpg" alt="">
+                <img src="images/EC.jpg" alt="logo icon">
+                <img src="images/IG.Icon.jpg" alt="instagram icon">
+                <img src="images/FB.icon.jpg" alt="facebook icon">
+                <img src="images/tw.icon.jpg" alt="twitter icon">
                 <p class="footer-content">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ab sint quos. Temporibus corporis illum adipisci consequatur quisquam officia libero error, quaerat expedita unde dignissimos, necessitatibus nam et ea exercitationem nemo veritatis dicta vero iure blanditiis. Iusto debitis exercitationem non laboriosam ut, repellendus maiores beatae labore esse, in voluptatibus veniam.
                 </p>
